# rocfl

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile  release.toml
.github/workflows/: build.yml  release.yml
resources/main/files/: config.toml
resources/main/specs/: 0006-flat-omit-prefix-storage-layout.md  0007-n-tuple-omit-prefix-storage-layout.md
resources/test/repos/multiple-objects/925/0b9/912/9250b9912ee91d6b46e23299459ecd6eb8154451d62558a3a0a708a77926ad04/v2/: inventory.json.sha512
resources/test/validate/custom/repos/invalid/b01/0ba/c95/b010bac9560b3cf4050f0585e9aee1732ce4fe380a331a800ad9f1525e201fff/v1/: inventory.json
resources/test/validate/custom/repos/invalid/b01/0ba/c95/b010bac9560b3cf4050f0585e9aee1732ce4fe380a331a800ad9f1525e201fff/v2/: inventory.json  inventory.json.sha512
resources/test/validate/custom/repos/invalid/b99/7a6/7ea/b997a67eacd839691ff9d6e490c5654e14a1783d460e4a4ef8d027547ddbf9e2/: inventory.json  inventory.json.sha512
resources/test/validate/custom/repos/invalid/e84/b88/ab1/e84b88ab161ae3c37e622100a59f287fab8383882219691ec921e506eb125a4f/v2/: inventory.json
resources/test/validate/official-1.0/bad/E001_v2_file_in_root/v1/: inventory.json.sha512
resources/test/validate/official-1.0/error/E001_v2_file_in_root/v1/: inventory.json
src/: fs.rs  lib.rs  s3.rs
src/cmd/: cat.rs  cmds.rs  diff.rs  init.rs  list.rs  mod.rs  new.rs  opts.rs  print.rs  style.rs  table.rs  validate.rs
src/config/: mod.rs
src/ocfl/: bimap.rs  consts.rs  digest.rs  error.rs  fs.rs  inventory.rs  layout.rs  lock.rs  mod.rs  paths.rs  repo.rs  s3.rs  serde.rs  specs.rs  types.rs  util.rs  validate.rs
src/ocfl/store/: fs.rs  layout.rs  mod.rs  s3.rs
src/ocfl/validate/: mod.rs  serde.rs  store.rs
tests/: cli-tests.rs  fs-tests.rs  s3-tests.rs  trycmd-tests.rs  validate-tests.rs
tests/common/: mod.rs
tests/trycmd/fs/: obj-info-1.toml  obj-info-2.toml  obj-info-3.toml  obj-info-4.toml  obj-upgrade-1.toml  obj-upgrade-2.toml  obj-upgrade-3.toml  obj-upgrade-4.toml  obj-upgrade-5.toml  obj-upgrade-6.toml  repo-info-1.toml  repo-info-2.toml  repo-init-1.toml  repo-upgrade-1.toml  repo-upgrade-2.toml
tests/trycmd/fs/invalid.in/235/2da/728/2352da7280f1decc3acf1ba84eb945c9fc2b7b541094e1d0992dbffd1b6664cc/v1/: inventory.json  inventory.json.sha512
tests/trycmd/fs/invalid.in/925/0b9/912/9250b9912ee91d6b46e23299459ecd6eb8154451d62558a3a0a708a77926ad04/v2/: inventory.json
tests/trycmd/fs/invalid.in/de2/d91/dc0/de2d91dc0a2580414e9a70f7dfc76af727b69cac0838f2cbe0a88d12642efcbf/: inventory.json  inventory.json.sha512
tests/trycmd/fs/multiple-objects-with-layout.in/: ocfl_layout.json
tests/trycmd/fs/multiple-objects-with-layout.in/extensions/0004-hashed-n-tuple-storage-layout/: config.json
tests/trycmd/fs/multiple-objects.in/925/0b9/912/9250b9912ee91d6b46e23299459ecd6eb8154451d62558a3a0a708a77926ad04/v3/: inventory.json.sha512
tests/trycmd/fs/obj-upgrade-2.out/925/0b9/912/9250b9912ee91d6b46e23299459ecd6eb8154451d62558a3a0a708a77926ad04/: inventory.json  inventory.json.sha512
tests/trycmd/fs/obj-upgrade-2.out/925/0b9/912/9250b9912ee91d6b46e23299459ecd6eb8154451d62558a3a0a708a77926ad04/v2/: inventory.json.sha512
tests/trycmd/fs/obj-upgrade-6.out/235/2da/728/2352da7280f1decc3acf1ba84eb945c9fc2b7b541094e1d0992dbffd1b6664cc/: inventory.json
tests/trycmd/fs/obj-upgrade-6.out/235/2da/728/2352da7280f1decc3acf1ba84eb945c9fc2b7b541094e1d0992dbffd1b6664cc/v1/: inventory.json
tests/trycmd/fs/obj-upgrade-6.out/235/2da/728/2352da7280f1decc3acf1ba84eb945c9fc2b7b541094e1d0992dbffd1b6664cc/v2/: inventory.json  inventory.json.sha512
tests/trycmd/fs/repo-1.1-staged.in/235/2da/728/2352da7280f1decc3acf1ba84eb945c9fc2b7b541094e1d0992dbffd1b6664cc/v1/: inventory.json.sha512
tests/trycmd/fs/repo-1.1-staged.in/extensions/rocfl-staging/235/2da/728/2352da7280f1decc3acf1ba84eb945c9fc2b7b541094e1d0992dbffd1b6664cc/: inventory.json  inventory.json.sha512
tests/trycmd/fs/repo-1.1.in/: ocfl_1.1.md
tests/trycmd/fs/repo-1.1.in/235/2da/728/2352da7280f1decc3acf1ba84eb945c9fc2b7b541094e1d0992dbffd1b6664cc/: inventory.json.sha512
tests/trycmd/fs/repo-1.1.in/235/2da/728/2352da7280f1decc3acf1ba84eb945c9fc2b7b541094e1d0992dbffd1b6664cc/v1/: inventory.json
tests/trycmd/fs/repo-1.1.in/925/0b9/912/9250b9912ee91d6b46e23299459ecd6eb8154451d62558a3a0a708a77926ad04/: inventory.json.sha512
tests/trycmd/fs/repo-1.1.in/925/0b9/912/9250b9912ee91d6b46e23299459ecd6eb8154451d62558a3a0a708a77926ad04/v1/: inventory.json
tests/trycmd/fs/repo-upgrade-1.out/: ocfl_1.0.txt
tests/trycmd/fs/repo-upgrade-1.out/925/0b9/912/9250b9912ee91d6b46e23299459ecd6eb8154451d62558a3a0a708a77926ad04/: inventory.json
tests/trycmd/fs/staged-objects.in/235/2da/728/2352da7280f1decc3acf1ba84eb945c9fc2b7b541094e1d0992dbffd1b6664cc/: inventory.json  inventory.json.sha512
tests/trycmd/fs/staged-objects.in/extensions/rocfl-staging/235/2da/728/2352da7280f1decc3acf1ba84eb945c9fc2b7b541094e1d0992dbffd1b6664cc/: inventory.json  inventory.json.sha512
tests/trycmd/fs/staged-objects.in/extensions/rocfl-staging/925/0b9/912/9250b9912ee91d6b46e23299459ecd6eb8154451d62558a3a0a708a77926ad04/: inventory.json  inventory.json.sha512
(+6 files in other folders)
