[package]
name = "rocfl"
version = "1.3.3"
authors = ["Peter Winckles <pwinckles@pm.me>"]
edition = "2018"
description= "A Rust CLI for OCFL repositories"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/pwinckles/rocfl"
homepage = "https://github.com/pwinckles/rocfl"
documentation = "https://docs.rs/rocfl/"

[[bin]]
name = "rocfl"
path = "src/bin/rocfl.rs"

[dependencies]
# General
lazy_static = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Errors
anyhow = "1"
thiserror = "1"

# Strings
natord = "1"
percent-encoding="2"
regex = "1"
unicode-width = "0.1"

# Enum features
enum_dispatch = "0.3"
strum = "0.20"
strum_macros = "0.20"

# Path handling
pathdiff = "0.2"

# CLI
structopt = "0.3"
clap = "2"
ansi_term = "0.12"

# Logging
log = "0.4"
env_logger = "0.8"

# Digests
digest = "0.9"
blake2 = "0.9"
hex = "0.4"
md-5 = "0.9"
sha-1 = "0.9"
sha2 = "0.9"

# Search
globset = "0.4"
grep-matcher = "0.1"
grep-searcher = "0.1"
grep-regex = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# AWS
rusoto_core = { version = "0.46", default_features = false, features =["rustls"] }
rusoto_credential = "0.46"
rusoto_s3 = { version = "0.46", default_features = false, features = ["rustls"] }
tokio = "1"

[dev-dependencies]
maplit = "1"