[package]
name = "rocfl"
version = "1.4.0"
authors = ["Peter Winckles <pwinckles@pm.me>"]
edition = "2018"
description= "A Rust CLI for OCFL repositories"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/pwinckles/rocfl"
homepage = "https://github.com/pwinckles/rocfl"
documentation = "https://docs.rs/rocfl/"

[features]
default = ["s3"]
s3 = ["rusoto_core", "rusoto_credential", "rusoto_s3", "tokio"]

[[bin]]
name = "rocfl"
path = "src/bin/rocfl.rs"

[dependencies]
# General
once_cell = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Errors
thiserror = "1"

# Strings
natord = "1"
percent-encoding="2"
regex = "1"
unicode-width = "0.1"

# Enum features
enum_dispatch = "0.3"
strum = "0.20"
strum_macros = "0.20"

# Path handling
pathdiff = "0.2"
remove_dir_all = "0.6" # https://github.com/rust-lang/rust/issues/29497
walkdir = "2"

# CLI
structopt = "0.3"
clap = "2"
ansi_term = "0.12"
ctrlc = "3"

# Logging
log = "0.4"
env_logger = "0.8"

# Digests
digest = "0.9"
blake2 = "0.9"
hex = "0.4"
md-5 = "0.9"
sha-1 = "0.9"
sha2 = "0.9"

# Search
globset = "0.4"
grep-matcher = "0.1"
grep-searcher = "0.1"
grep-regex = "0.1"

# Serialization
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"

# AWS S3
rusoto_core = { version = "0.46", default_features = false, features =["rustls"], optional = true }
rusoto_credential = { version = "0.46", optional = true }
rusoto_s3 = { version = "0.46", default_features = false, features = ["rustls"], optional = true }
tokio = { version = "1", optional = true }

[dev-dependencies]
assert_fs = "1"
fs_extra = "1"
maplit = "1"
predicates = "1"
tempfile = "3"